[package]
name = "sb3-stuff"
version = "0.1.0"
edition = "2021"
description = "Utilities for working with `.sb3` files"
license = "WTFPL"
repository = "https://github.com/Johan-Mi/sb3-stuff"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_str = "0.1"
